@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-900: Remove timers for compute method (majakabiljo via pavanka)
+
   GIRAPH-894: make giraphconfiguration available to workercontext (pavanka)
 
   GIRAPH-910: removing unnecessary boxing in some places in giraph-core (pavanka)  
